fixed tag spacing and buzz

--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -153,7 +153,7 @@ margin-top: 20px;
 
 .col-xs-1 {
 /* width: 8.33333333%; */
-margin-bottom: 8px;
+margin-bottom: 4px;
 }
 
 .btn-default{
